# algo-collusion-mm

./: .gitignore  LICENSE  README.md  environment.yml  main.ipynb  main_exp3.ipynb  notebook_exp3.ipynb  pyproject.toml  requirements.txt  script_exp3.py  setup.py
algo_collusion_mm/: enums.py  envs.py
algo_collusion_mm/agents/: __init__.py  agent.py
algo_collusion_mm/agents/makers/: __init__.py  exp3.py  hedge.py  maker.py  mlql.py  ql.py
algo_collusion_mm/agents/makers/informed/: __init__.py  crm.py  hedge.py  m3.py  mlql.py  nir.py  ql.py  tft.py
algo_collusion_mm/agents/makers/uninformed/: __init__.py  exp3.py  m3.py  mlql.py
algo_collusion_mm/agents/traders/: __init__.py  basic.py  nopass.py  trader.py
algo_collusion_mm/utils/: common.py  gtu.py  plots.py  stats.py  storage.py
notebooks/: dev.ipynb  exp3.ipynb  notebook_exp3.ipynb  notebook_game_analysis.ipynb  notebook_hedge.ipynb
scripts/: exp3.py  runner.py  script_crm.py  script_exp3.py  script_hedge.py  script_m3.py  script_mlql.py  script_nir.py
src/: envs.py
src/agents/: agent.py  makers.py  traders.py
src/agents/makers/: exp3.py  maker.py  mlql.py  ql.py
src/agents/traders/: basic.py  nopass.py  trader.py
src/utils/: common.py  gtu.py  plots.py  stats.py  storage.py
